--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -115,6 +115,7 @@
     "@metamask/auto-changelog": "^4.1.0",
     "@metamask/browser-passworder": "^6.0.0",
     "@metamask/template-snap": "^0.7.0",
+    "@noble/hashes": "^1.7.1",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
