--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -83,7 +83,7 @@
     "@metamask/base-controller": "^8.0.0",
     "@metamask/json-rpc-engine": "^10.0.2",
     "@metamask/json-rpc-middleware-stream": "^8.0.7",
-    "@metamask/key-tree": "^10.0.2",
+    "@metamask/key-tree": "^10.1.0",
     "@metamask/object-multiplex": "^2.1.0",
     "@metamask/permission-controller": "^11.0.6",
     "@metamask/phishing-controller": "^12.4.0",
@@ -115,6 +115,7 @@
     "@metamask/auto-changelog": "^4.1.0",
     "@metamask/browser-passworder": "^6.0.0",
     "@metamask/template-snap": "^0.7.0",
+    "@noble/hashes": "^1.7.1",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
