--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -189,10 +189,15 @@ jobs:
         with:
           name: build-source-${{ runner.os }}-${{ github.sha }}
       - name: Install Google Chrome
-        if: ${{ matrix.package-name == '@metamask/snaps-controllers' || matrix.package-name == '@metamask/snaps-execution-environments' || matrix.package-name == '@metamask/snaps-utils' }}
+        if: ${{ matrix.package-name == '@metamask/snaps-controllers' || matrix.package-name == '@metamask/snaps-utils' }}
         uses: MetaMask/action-retry-command@v1
         with:
           command: yarn install-chrome
+      - name: Install Chromium
+        if: ${{ matrix.package-name == '@metamask/snaps-execution-environments' }}
+        uses: MetaMask/action-retry-command@v1
+        with:
+          command: yarn playwright install --with-deps
       - name: Run tests
         uses: MetaMask/action-retry-command@v1
         with:
