--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -57,7 +57,7 @@
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "start": "node scripts/start.js",
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
-    "test:browser": "wdio run wdio.config.js",
+    "test:browser": "vitest",
     "test:clean": "jest --clearCache",
     "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/wdio",
     "test:verbose": "jest --verbose",
@@ -92,20 +92,14 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^27.5.1",
     "@types/node": "18.14.2",
-    "@wdio/browser-runner": "^8.19.0",
-    "@wdio/cli": "^8.19.0",
-    "@wdio/globals": "^8.19.0",
-    "@wdio/mocha-framework": "^8.19.0",
-    "@wdio/spec-reporter": "^8.19.0",
-    "@wdio/static-server-service": "^8.19.0",
+    "@vitest/browser": "^3.0.8",
+    "@vitest/coverage-v8": "^3.0.8",
     "babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
-    "esbuild": "^0.25.2",
     "eslint": "^9.11.0",
-    "expect-webdriverio": "^4.4.1",
     "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.1.5",
@@ -115,6 +109,7 @@
     "jest-silent-reporter": "^0.6.0",
     "lavamoat": "^8.0.4",
     "lavamoat-browserify": "^17.0.5",
+    "playwright": "^1.51.0",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "serve-handler": "^6.1.5",
@@ -124,9 +119,7 @@
     "typescript": "~5.3.3",
     "vite": "^6.2.3",
     "vite-tsconfig-paths": "^4.0.5",
-    "wdio-chromedriver-service": "^8.1.1",
-    "wdio-geckodriver-service": "^5.0.2",
-    "webdriverio": "^8.19.0",
+    "vitest": "^3.0.8",
     "yargs": "^17.7.1"
   },
   "engines": {
