Work in progress - Migrate more browser tests to Vitest

--- a/packages/snaps-utils/tsconfig.json
+++ b/packages/snaps-utils/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "baseUrl": "./"
   },
-  "include": ["./src", "scripts", "package.json"],
+  "include": ["./src", "scripts", "package.json", "vitest.config.mts"],
   "references": [{ "path": "../snaps-sdk" }]
 }
