--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -129,6 +129,7 @@
     "@types/readable-stream": "^4.0.15",
     "@types/semver": "^7.5.0",
     "@types/tar-stream": "^3.1.1",
+    "@vitest/browser": "^3.0.8",
     "@wdio/browser-runner": "^8.19.0",
     "@wdio/cli": "^8.19.0",
     "@wdio/globals": "^8.19.0",
@@ -151,7 +152,9 @@
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3",
     "vite": "^6.2.3",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^4.0.5",
+    "vitest": "^3.0.8",
     "wdio-chromedriver-service": "^8.1.1",
     "wdio-geckodriver-service": "^5.0.2",
     "webdriverio": "^8.19.0"
