--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -70,7 +70,7 @@
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
-    "test:browser": "wdio run wdio.config.js",
+    "test:browser": "vitest",
     "test:clean": "jest --clearCache",
     "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/wdio",
     "test:verbose": "jest --verbose",
@@ -117,6 +117,8 @@
     "@types/node": "18.14.2",
     "@types/semver": "^7.5.0",
     "@types/validate-npm-package-name": "^4.0.0",
+    "@vitest/browser": "^3.0.8",
+    "@vitest/coverage-istanbul": "3.0.8",
     "@wdio/browser-runner": "^8.19.0",
     "@wdio/cli": "^8.19.0",
     "@wdio/globals": "^8.19.0",
@@ -140,6 +142,7 @@
     "typescript": "~5.3.3",
     "vite": "^6.2.3",
     "vite-tsconfig-paths": "^4.0.5",
+    "vitest": "^3.0.8",
     "wdio-chromedriver-service": "^8.1.1",
     "wdio-geckodriver-service": "^5.0.2",
     "webdriverio": "^8.19.0"
