--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -72,7 +72,7 @@
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
     "test:browser": "vitest",
     "test:clean": "jest --clearCache",
-    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/wdio",
+    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
@@ -113,23 +113,14 @@
     "@ts-bridge/cli": "^0.6.1",
     "@types/jest": "^27.5.1",
     "@types/luxon": "^3",
-    "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/semver": "^7.5.0",
     "@types/validate-npm-package-name": "^4.0.0",
     "@vitest/browser": "^3.0.8",
     "@vitest/coverage-istanbul": "3.0.8",
-    "@wdio/browser-runner": "^8.19.0",
-    "@wdio/cli": "^8.19.0",
-    "@wdio/globals": "^8.19.0",
-    "@wdio/mocha-framework": "^8.19.0",
-    "@wdio/spec-reporter": "^8.19.0",
-    "@wdio/static-server-service": "^8.19.0",
-    "@wdio/types": "^8.19.0",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
-    "expect-webdriverio": "^4.4.1",
     "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.1.5",
@@ -142,10 +133,7 @@
     "typescript": "~5.3.3",
     "vite": "^6.2.3",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^3.0.8",
-    "wdio-chromedriver-service": "^8.1.1",
-    "wdio-geckodriver-service": "^5.0.2",
-    "webdriverio": "^8.19.0"
+    "vitest": "^3.0.8"
   },
   "engines": {
     "node": "^18.16 || >=20"
