--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "rimraf": "^4.1.2",
     "semver": "^7.5.4",
     "simple-git-hooks": "^2.7.0",
+    "supports-color": "^7.2.0",
     "ts-node": "^10.9.1",
     "tsx": "^4.19.1",
     "typescript": "~5.3.3",
