--- a/tsconfig.packages.json
+++ b/tsconfig.packages.json
@@ -17,6 +17,7 @@
       "@metamask/*": ["../*/src"]
     },
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
     "useUnknownInCatchVariables": false
