--- a/packages/snaps-execution-environments/.depcheckrc.json
+++ b/packages/snaps-execution-environments/.depcheckrc.json
@@ -7,6 +7,7 @@
     "@metamask/eslint-*",
     "@types/*",
     "@typescript-eslint/*",
+    "@vitest/coverage-v8",
     "@wdio/*",
     "eslint-config-*",
     "eslint-plugin-*",
