--- a/packages/snaps-execution-environments/tsconfig.json
+++ b/packages/snaps-execution-environments/tsconfig.json
@@ -10,7 +10,8 @@
     "webpack.config.js",
     "scripts",
     "package.json",
-    "vitest.config.mts"
+    "vitest.config.mts",
+    "vitest.config.firefox.mts"
   ],
   "references": [
     {
