--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -72,6 +72,7 @@
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
     "test:browser": "vitest",
+    "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
     "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
     "test:pre": "yarn mkdirp test/fixtures && ./scripts/generate-fixtures.sh",
