--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -58,6 +58,7 @@
     "start": "node scripts/start.js",
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
     "test:browser": "vitest",
+    "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
     "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
     "test:verbose": "jest --verbose",
