--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -71,6 +71,7 @@
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
     "test:browser": "vitest",
+    "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
     "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
     "test:verbose": "jest --verbose",
