--- a/packages/snaps-controllers/tsconfig.json
+++ b/packages/snaps-controllers/tsconfig.json
@@ -8,7 +8,8 @@
     "scripts",
     "package.json",
     "react-native.d.ts",
-    "vitest.config.mts"
+    "vitest.config.mts",
+    "vitest.config.firefox.mts"
   ],
   "references": [
     { "path": "../snaps-execution-environments" },
