--- a/packages/snaps-rpc-methods/package.json
+++ b/packages/snaps-rpc-methods/package.json
@@ -62,8 +62,7 @@
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.2.0",
-    "@noble/hashes": "^1.7.1",
-    "luxon": "^3.5.0"
+    "@noble/hashes": "^1.7.1"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
@@ -72,7 +71,6 @@
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
-    "@types/luxon": "^3",
     "@types/node": "18.14.2",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
