Move luxon and utils to `snaps-utils`

--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -95,6 +95,7 @@
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
     "fast-xml-parser": "^4.4.1",
+    "luxon": "^3.5.0",
     "marked": "^12.0.1",
     "rfdc": "^1.3.0",
     "semver": "^7.5.4",
@@ -111,6 +112,7 @@
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
     "@types/jest": "^27.5.1",
+    "@types/luxon": "^3",
     "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/semver": "^7.5.0",
