Use Vitest for browser tests (#3236)
This migrates all browser tests which were previously run with
WebdriverIO to Vitest. WebdriverIO had several issues like flakiness,
lack of certain APIs since it uses Mocha, and performance in CI. Vitest
does not seem to have these issues.

Long term we can start migrating all tests to Vitest instead of Jest.
The APIs are largely the same between the two, so the migration should
be relatively straightforward, and it simplifies some of our custom
logic like merging coverage.

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -188,15 +188,20 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-source-${{ runner.os }}-${{ github.sha }}
-      - name: Install Google Chrome
+      - name: Install browsers
         if: ${{ matrix.package-name == '@metamask/snaps-controllers' || matrix.package-name == '@metamask/snaps-execution-environments' || matrix.package-name == '@metamask/snaps-utils' }}
         uses: MetaMask/action-retry-command@v1
         with:
-          command: yarn install-chrome
+          command: yarn playwright install --with-deps --only-shell chromium firefox
       - name: Run tests
         uses: MetaMask/action-retry-command@v1
         with:
           command: yarn workspace ${{ matrix.package-name }} run test
+      - name: Run Firefox tests
+        if: ${{ matrix.package-name == '@metamask/snaps-controllers' || matrix.package-name == '@metamask/snaps-execution-environments' || matrix.package-name == '@metamask/snaps-utils' }}
+        uses: MetaMask/action-retry-command@v1
+        with:
+          command: yarn workspace ${{ matrix.package-name }} run test:browser:firefox
       - name: Get coverage folder
         id: get-coverage-folder
         run: |
