--- a/packages/snaps-execution-environments/.depcheckrc.json
+++ b/packages/snaps-execution-environments/.depcheckrc.json
@@ -7,18 +7,15 @@
     "@metamask/eslint-*",
     "@types/*",
     "@typescript-eslint/*",
-    "@wdio/*",
+    "@vitest/coverage-v8",
     "eslint-config-*",
     "eslint-plugin-*",
     "jest-silent-reporter",
-    "expect-webdriverio",
     "prettier-plugin-packagejson",
     "ts-node",
     "typedoc",
     "typescript",
     "vite",
-    "wdio-*",
-    "webdriverio",
     "@metamask/snaps-execution-environments"
   ]
 }
