--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
     "@types/lodash": "^4",
     "@types/node": "18.14.2",
     "@yarnpkg/types": "^4.0.0",
-    "chromedriver": "^135.0.0",
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
@@ -105,18 +104,19 @@
     "eslint-plugin-promise": "^7.1.0",
     "execa": "^5.1.1",
     "favicons": "^7.1.2",
-    "geckodriver": "^4.2.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
     "lint-staged": "^12.4.1",
     "lodash": "^4.17.21",
     "minimatch": "^7.4.1",
+    "playwright": "~1.49.0",
     "prettier": "^3.3.3",
     "prettier-2": "npm:prettier@^2.8.8",
     "prettier-plugin-packagejson": "^2.5.8",
     "rimraf": "^4.1.2",
     "semver": "^7.5.4",
     "simple-git-hooks": "^2.7.0",
+    "supports-color": "^7.2.0",
     "ts-node": "^10.9.1",
     "tsx": "^4.19.1",
     "typescript": "~5.3.3",
@@ -132,9 +132,7 @@
       "@lavamoat/preinstall-always-fail": false,
       "simple-git-hooks": false,
       "$root$": false,
-      "chromedriver": true,
       "jest>jest-cli>jest-config>ts-node>@swc/core": false,
-      "geckodriver": true,
       "ts-node>@swc/core": true,
       "@swc/core": true,
       "favicons>sharp": true,
