--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -71,9 +71,10 @@
     "publish:preview": "yarn npm publish --tag preview",
     "since-latest-release": "../../scripts/since-latest-release.sh",
     "test": "jest --reporters=jest-silent-reporter && yarn test:browser",
-    "test:browser": "wdio run wdio.config.js",
+    "test:browser": "vitest",
+    "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
-    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/wdio",
+    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
     "test:pre": "yarn mkdirp test/fixtures && ./scripts/generate-fixtures.sh",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
@@ -109,8 +110,6 @@
     "tar-stream": "^3.1.7"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@lavamoat/allow-scripts": "^3.0.4",
     "@metamask/auto-changelog": "^5.0.1",
     "@metamask/browser-passworder": "^6.0.0",
@@ -124,22 +123,14 @@
     "@types/gunzip-maybe": "^1.4.0",
     "@types/jest": "^27.5.1",
     "@types/luxon": "^3",
-    "@types/mocha": "^10.0.1",
     "@types/node": "18.14.2",
     "@types/readable-stream": "^4.0.15",
     "@types/semver": "^7.5.0",
     "@types/tar-stream": "^3.1.1",
-    "@wdio/browser-runner": "^8.19.0",
-    "@wdio/cli": "^8.19.0",
-    "@wdio/globals": "^8.19.0",
-    "@wdio/mocha-framework": "^8.19.0",
-    "@wdio/spec-reporter": "^8.19.0",
-    "@wdio/static-server-service": "^8.19.0",
+    "@vitest/browser": "^3.0.8",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
-    "esbuild": "^0.25.2",
     "eslint": "^9.11.0",
-    "expect-webdriverio": "^4.4.1",
     "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.1.5",
@@ -152,10 +143,9 @@
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3",
     "vite": "^6.2.3",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^4.0.5",
-    "wdio-chromedriver-service": "^8.1.1",
-    "wdio-geckodriver-service": "^5.0.2",
-    "webdriverio": "^8.19.0"
+    "vitest": "^3.0.8"
   },
   "peerDependencies": {
     "@metamask/snaps-execution-environments": "workspace:^"
