--- a/packages/snaps-execution-environments/tsconfig.json
+++ b/packages/snaps-execution-environments/tsconfig.json
@@ -5,7 +5,14 @@
     "typeRoots": ["../../node_modules/@types", "./node_modules/@types"],
     "allowJs": true
   },
-  "include": ["./src", "webpack.config.js", "scripts", "package.json"],
+  "include": [
+    "./src",
+    "webpack.config.js",
+    "scripts",
+    "package.json",
+    "vitest.config.mts",
+    "vitest.config.firefox.mts"
+  ],
   "references": [
     {
       "path": "../snaps-sdk"
