--- a/packages/snaps-cli/package.json
+++ b/packages/snaps-cli/package.json
@@ -64,6 +64,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/snaps-sandbox": "workspace:^",
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/snaps-webpack-plugin": "workspace:^",
@@ -79,6 +80,7 @@
     "crypto-browserify": "^3.12.0",
     "domain-browser": "^4.22.0",
     "events": "^3.3.0",
+    "express": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "https-browserify": "^1.0.0",
     "ora": "^5.4.1",
@@ -111,6 +113,7 @@
     "@metamask/auto-changelog": "^5.0.1",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
+    "@types/express": "^5.0.1",
     "@types/jest": "^27.5.1",
     "@types/node": "18.14.2",
     "@types/serve-handler": "^6.1.0",
