--- a/.github/workflows/update-pull-request.yml
+++ b/.github/workflows/update-pull-request.yml
@@ -80,7 +80,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PULL_REQUEST_UPDATE_TOKEN }}
           PR_NUMBER: ${{ inputs.pull-request != 0 && inputs.pull-request || github.event.issue.number }}
       - name: Checkout and setup environment
-        uses: MetaMask/action-checkout-and-setup@v1
+        uses: MetaMask/action-checkout-and-setup@0ef0a3f4f06fa8f53fe9358bc3abfaddc46c5848
         with:
           is-high-risk-environment: false
           cache-node-modules: true
@@ -101,7 +101,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PULL_REQUEST_UPDATE_TOKEN }}
           PR_NUMBER: ${{ inputs.pull-request != 0 && inputs.pull-request || github.event.issue.number }}
       - name: Checkout and setup environment
-        uses: MetaMask/action-checkout-and-setup@v1
+        uses: MetaMask/action-checkout-and-setup@0ef0a3f4f06fa8f53fe9358bc3abfaddc46c5848
         with:
           is-high-risk-environment: false
       - name: Deduplicate yarn.lock
@@ -131,7 +131,7 @@ jobs:
         with:
           name: yarn-lock-${{ needs.prepare.outputs.COMMIT_SHA }}
       - name: Checkout and setup environment
-        uses: MetaMask/action-checkout-and-setup@v1
+        uses: MetaMask/action-checkout-and-setup@0ef0a3f4f06fa8f53fe9358bc3abfaddc46c5848
         with:
           is-high-risk-environment: false
       - name: Regenerate LavaMoat policies
@@ -163,7 +163,7 @@ jobs:
         with:
           name: yarn-lock-${{ needs.prepare.outputs.COMMIT_SHA }}
       - name: Checkout and setup environment
-        uses: MetaMask/action-checkout-and-setup@v1
+        uses: MetaMask/action-checkout-and-setup@0ef0a3f4f06fa8f53fe9358bc3abfaddc46c5848
         with:
           is-high-risk-environment: false
       - name: Build dependencies
