--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -117,6 +117,7 @@
     "@noble/hashes": "^1.7.1",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
+    "@testing-library/dom": "^10.4.0",
     "@ts-bridge/cli": "^0.6.1",
     "@types/chrome": "^0.0.237",
     "@types/concat-stream": "^2.0.0",
