--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -89,6 +89,7 @@
     "@metamask/auto-changelog": "^5.0.1",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
+    "@testing-library/dom": "^10.4.0",
     "@ts-bridge/cli": "^0.6.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^27.5.1",
