--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -109,6 +109,7 @@
     "@metamask/post-message-stream": "^9.0.0",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
+    "@testing-library/dom": "^10.4.0",
     "@ts-bridge/cli": "^0.6.1",
     "@types/jest": "^27.5.1",
     "@types/luxon": "^3",
