--- a/packages/snaps-cli/package.json
+++ b/packages/snaps-cli/package.json
@@ -35,7 +35,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.cts",
   "bin": {
-    "mm-snap": "./dist/main.cjs"
+    "mm-snap": "./dist/main.mjs"
   },
   "files": [
     "dist",
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "build": "ts-bridge --project tsconfig.build.json --verbose --clean --no-references",
-    "build:chmod": "chmod +x ./dist/main.mjs && chmod +x ./dist/main.js",
+    "build:chmod": "chmod +x ./dist/main.mjs && chmod +x ./dist/main.cjs",
     "build:post": "yarn build:chmod && yarn build:readme",
     "build:readme": "node ./scripts/updateReadme.js",
     "build:watch": "tsc-watch --onSuccess 'yarn build:chmod'",
@@ -64,14 +64,6 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-transform-class-properties": "^7.22.5",
-    "@babel/plugin-transform-class-static-block": "^7.22.11",
-    "@babel/plugin-transform-private-methods": "^7.22.5",
-    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
-    "@babel/plugin-transform-runtime": "^7.13.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-typescript": "^7.23.2",
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/snaps-webpack-plugin": "workspace:^",
@@ -79,8 +71,6 @@
     "@metamask/utils": "^11.2.0",
     "@swc/core": "1.3.78",
     "assert": "^2.0.0",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "chalk": "^4.1.2",
@@ -121,7 +111,6 @@
     "@metamask/auto-changelog": "^5.0.1",
     "@swc/jest": "^0.2.26",
     "@ts-bridge/cli": "^0.6.1",
-    "@types/browserify": "^12.0.37",
     "@types/jest": "^27.5.1",
     "@types/node": "18.14.2",
     "@types/serve-handler": "^6.1.0",
