--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -1,4 +1,4 @@
-name: Validate pull request title
+name: Validate pull request
 on:
   pull_request:
     branches:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   validate-pull-request-title:
-    name: Validate pull request title
+    name: Validate title
     runs-on: ubuntu-latest
     steps:
       - name: Validate title
