--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -82,7 +82,6 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@lavamoat/allow-scripts": "^3.0.4",
-    "@lavamoat/lavapack": "^7.0.8",
     "@lavamoat/lavatube": "^1.0.0",
     "@lavamoat/webpack": "^0.9.0-beta.0",
     "@metamask/auto-changelog": "^5.0.2",
@@ -121,9 +120,7 @@
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^3.1.1",
     "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.9.0",
-    "yargs": "^17.7.1"
+    "webpack-merge": "^5.9.0"
   },
   "engines": {
     "node": "^18.16 || >=20"
