Refactor manifest validation to provide detected exports

--- a/packages/examples/packages/bip32/snap.manifest.json
+++ b/packages/examples/packages/bip32/snap.manifest.json
@@ -17,10 +17,7 @@
     }
   },
   "initialPermissions": {
-    "endowment:rpc": {
-      "dapps": true,
-      "snaps": true
-    },
+    "endowment:page-home": {},
     "snap_dialog": {},
     "snap_getBip32Entropy": [
       {
