--- a/packages/snaps-cli/tsconfig.build.json
+++ b/packages/snaps-cli/tsconfig.build.json
@@ -14,6 +14,7 @@
     "./src/**/__snapshots__"
   ],
   "references": [
+    { "path": "../snaps-rpc-methods/tsconfig.build.json" },
     { "path": "../snaps-utils/tsconfig.build.json" },
     { "path": "../snaps-webpack-plugin/tsconfig.build.json" }
   ]
