Revert "chore!: Remove web worker execution service and environment (#3357)"
This reverts commit 042d2fa2815a3dd009fd4ca558451046ae869afd.

--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -74,6 +74,7 @@
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/superstruct": "^3.2.1",
     "@metamask/utils": "^11.4.0",
+    "nanoid": "^3.3.10",
     "readable-stream": "^3.6.2"
   },
   "devDependencies": {
